--- a/style.css
+++ b/style.css
@@ -33,4 +33,42 @@
     background-color: blue;
     top: 45px;
     left: 450px;
+    
+}
+
+.icon-image{
+    width: 80px;
+    height: 80px;
+    background-color: #ffffff;
+    /* display: block; */
+    top: -50px;
+    left: 125px;
+}
+.single-about{
+    background-color: #f1f1f1;
+}
+.circle-1{
+    width: 72px;
+    height: 72px;
+    background-color: #f1f1f1;
+}
+.circle-2{
+    width: 70px;
+    height: 70px;
+    background-color: #ffffff;
+}
+.circle-3{
+    width: 65px;
+    height: 65px;
+    background-color: #f1f1f1;
+}
+.icon-image img{
+    width: 30px;
+    height: 30px;
+}
+.about-div{
+    margin: 100px 0;
+}
+.circle-1:hover .circle-3{
+    background-color: #5bc5f4;
 }
